@@ -98,13 +98,20 @@
 {
   NSMutableDictionary *props;
   NSPoint p;
-  NSString *s;
   NSString *fontname;
   float fsize;
   NSFont *fontObj;
   float parspace;
   NSTextAlignment align;          
   NSMutableParagraphStyle *style;
+  NSColor *color;
+  NSString *strVal;
+  NSArray *linearr;
+  float strokeCol[4];
+  float fillCol[4];
+  float strokeAlpha;
+  float fillAlpha;
+  id obj;
           
   props = [NSMutableDictionary dictionaryWithCapacity:2];
   [props setObject:[description objectForKey: @"string"] forKey:@"string"];
@@ -125,93 +132,98 @@
   [style setParagraphSpacing: parspace];
   [props setObject:style forKey:@"paragraphstyle"];
   [style release];
+
+  strVal = [description objectForKey: @"strokecolor"];
+  linearr = [strVal componentsSeparatedByString: @" "];
+  strokeAlpha = [[description objectForKey: @"strokealpha"] floatValue];
+  color = nil;
+  if ([linearr count] == 3)
+    {
+      strokeCol[0] = [[linearr objectAtIndex: 0] floatValue];
+      strokeCol[1] = [[linearr objectAtIndex: 1] floatValue];
+      strokeCol[2] = [[linearr objectAtIndex: 2] floatValue];
+      color = [NSColor colorWithCalibratedRed: strokeCol[0]
+					green: strokeCol[1]
+					 blue: strokeCol[2]
+					alpha: strokeAlpha];
+    }
+  else
+    {
+      strokeCol[0] = [[linearr objectAtIndex: 0] floatValue];
+      strokeCol[1] = [[linearr objectAtIndex: 1] floatValue];
+      strokeCol[2] = [[linearr objectAtIndex: 2] floatValue];
+      strokeCol[3] = [[linearr objectAtIndex: 3] floatValue];
+      color = [NSColor colorWithDeviceCyan: strokeCol[0]
+				   magenta: strokeCol[1]
+				    yellow: strokeCol[2]
+				     black: strokeCol[3]
+				     alpha: strokeAlpha];
+      color = [color colorUsingColorSpaceName: NSCalibratedRGBColorSpace];
+    }
+  if (color)
+    [props setObject:color forKey:@"strokecolor"];
+  
+  strVal = [description objectForKey: @"fillcolor"];
+  linearr = [strVal componentsSeparatedByString: @" "];
+  fillAlpha = [[description objectForKey: @"fillalpha"] floatValue];
+  color = nil;
+  if ([linearr count] == 3)
+    {
+      fillCol[0] = [[linearr objectAtIndex: 0] floatValue];
+      fillCol[1] = [[linearr objectAtIndex: 1] floatValue];
+      fillCol[2] = [[linearr objectAtIndex: 2] floatValue];
+      color = [NSColor colorWithCalibratedRed: fillCol[0]
+					    green: fillCol[1]
+					     blue: fillCol[2]
+					    alpha: fillAlpha];
+    }
+  else
+    {
+      fillCol[0] = [[linearr objectAtIndex: 0] floatValue];
+      fillCol[1] = [[linearr objectAtIndex: 1] floatValue];
+      fillCol[2] = [[linearr objectAtIndex: 2] floatValue];
+      fillCol[3] = [[linearr objectAtIndex: 3] floatValue];
+      color = [NSColor colorWithDeviceCyan: fillCol[0]
+				   magenta: fillCol[1]
+				    yellow: fillCol[2]
+				     black: fillCol[3]
+				     alpha: fillAlpha];
+      color = [color colorUsingColorSpaceName: NSCalibratedRGBColorSpace];
+    }
+  if (color)
+    [props setObject:color forKey:@"fillcolor"];
+  
+  obj = [description objectForKey: @"stroked"];
+  if ([obj isKindOfClass:[NSString class]])
+    obj = [NSNumber numberWithInt:[obj intValue]];
+  [props setObject:obj forKey:@"stroked"];
+
+  obj = [description objectForKey: @"filled"];
+  if ([obj isKindOfClass:[NSString class]])
+    obj = [NSNumber numberWithInt:[obj intValue]];	
+  [props setObject:obj forKey:@"filled"];
+
+  obj = [description objectForKey: @"visible"];
+  if ([obj isKindOfClass:[NSString class]])
+    obj = [NSNumber numberWithInt:[obj intValue]];	
+  [props setObject:obj forKey:@"visibile"];
+  
+  obj = [description objectForKey: @"locked"];
+  if ([obj isKindOfClass:[NSString class]])
+    obj = [NSNumber numberWithInt:[obj intValue]];
+  [props setObject:obj forKey:@"locked"];
+
+  obj = [description objectForKey: @"rotation"];
+  if (obj)
+    [props setObject:obj forKey: @"rotation"];
   
   self = [self initInView:aView atPoint:p zoomFactor:zf withProperties:props openEditor:NO];
   if(self)
     {
-      NSArray *linearr;
-      float strokeCol[4];
-      float fillCol[4];
-      float strokeAlpha;
-      float fillAlpha;
-      id obj;
+
       
       scalex = [[description objectForKey: @"scalex"] floatValue];
       scaley = [[description objectForKey: @"scaley"] floatValue];
-      rotation = [[description objectForKey: @"rotation"] floatValue];
-      
-      obj = [description objectForKey: @"stroked"];
-      if ([obj isKindOfClass:[NSString class]])
-        obj = [NSNumber numberWithInt:[obj intValue]];
-      stroked = [obj boolValue];
-      strokeAlpha = [[description objectForKey: @"strokealpha"] floatValue];
-      s = [description objectForKey: @"strokecolor"];
-      linearr = [s componentsSeparatedByString: @" "];
-      if ([linearr count] == 3)
-        {
-          strokeCol[0] = [[linearr objectAtIndex: 0] floatValue];
-          strokeCol[1] = [[linearr objectAtIndex: 1] floatValue];
-          strokeCol[2] = [[linearr objectAtIndex: 2] floatValue];
-          strokeColor = [NSColor colorWithCalibratedRed: strokeCol[0]
-                                                  green: strokeCol[1]
-                                                   blue: strokeCol[2]
-                                                  alpha: strokeAlpha];
-          [strokeColor retain];
-        }
-      else
-        {
-          strokeCol[0] = [[linearr objectAtIndex: 0] floatValue];
-          strokeCol[1] = [[linearr objectAtIndex: 1] floatValue];
-          strokeCol[2] = [[linearr objectAtIndex: 2] floatValue];
-          strokeCol[3] = [[linearr objectAtIndex: 3] floatValue];
-          strokeColor = [NSColor colorWithDeviceCyan: strokeCol[0]
-                                             magenta: strokeCol[1]
-                                              yellow: strokeCol[2]
-                                               black: strokeCol[3]
-                                               alpha: strokeAlpha];
-          strokeColor = [[strokeColor colorUsingColorSpaceName: NSCalibratedRGBColorSpace] retain];
-        }
-      obj = [description objectForKey: @"filled"];
-      if ([obj isKindOfClass:[NSString class]])
-        obj = [NSNumber numberWithInt:[obj intValue]];
-      filled = [obj boolValue];
-      fillAlpha = [[description objectForKey: @"fillalpha"] floatValue];
-      s = [description objectForKey: @"fillcolor"];
-      linearr = [s componentsSeparatedByString: @" "];
-      if ([linearr count] == 3)
-        {
-          fillCol[0] = [[linearr objectAtIndex: 0] floatValue];
-          fillCol[1] = [[linearr objectAtIndex: 1] floatValue];
-          fillCol[2] = [[linearr objectAtIndex: 2] floatValue];
-          fillColor = [NSColor colorWithCalibratedRed: fillCol[0]
-                                                green: fillCol[1]
-                                                 blue: fillCol[2]
-                                                alpha: fillAlpha];
-          [fillColor retain];
-        }
-      else
-        {
-          fillCol[0] = [[linearr objectAtIndex: 0] floatValue];
-          fillCol[1] = [[linearr objectAtIndex: 1] floatValue];
-          fillCol[2] = [[linearr objectAtIndex: 2] floatValue];
-          fillCol[3] = [[linearr objectAtIndex: 3] floatValue];
-          fillColor = [NSColor colorWithDeviceCyan: fillCol[0]
-                                           magenta: fillCol[1]
-                                            yellow: fillCol[2]
-                                             black: fillCol[3]
-                                             alpha: fillAlpha];
-          fillColor = [[fillColor colorUsingColorSpaceName: NSCalibratedRGBColorSpace] retain];
-        }
-      obj = [description objectForKey: @"visible"];
-      if ([obj isKindOfClass:[NSString class]])
-        obj = [NSNumber numberWithInt:[obj intValue]];
-      visible = [obj boolValue];
-      obj = [description objectForKey: @"locked"];
-      if ([obj isKindOfClass:[NSString class]])
-        obj = [NSNumber numberWithInt:[obj intValue]];
-      locked = [obj boolValue];
-      
-      [self setZoomFactor: zf];
     }
   return self;
 }
